# game-audio

./: .gitignore  .gitmodules  CMakeLists.txt
builders/cmake/: CMakeLists.txt  RequireOutOfSource.cmake
builders/cmake/Modules/: FindOgg.cmake  FindVorbis.cmake
builders/doxygen/: Doxyfile
src/: audio.cxx  audio.hpp  audiobackend.cxx  audiobackend.hpp  audiosample.cxx  audiosample.hpp  audiosource.cxx  audiosource.hpp  common.hpp  oggaudiosample.cxx  oggaudiosample.hpp  samplecache.cxx  samplecache.hpp  simplesamplecache.cxx  simplesamplecache.hpp
